[tool.poetry]
name = "repl-nix-pyleetcode"
version = "0.1.0"
description = ""
authors = ["0xff3232 <zanechocolinked@gmail.com>"]
readme = "README.md"
packages = [{include = "repl_nix_pyleetcode"}]

[tool.poetry.dependencies]
python = "^3.10"
db = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
